Kubernetes/Manifiestos/07_Pod_+_Gateway_API_+_HostLocal_+_Host_Personalizado/02_Host_Personalizado/gateway-multicontainer-host-personalizado.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mc-gateway-pod # base del selector
  name: mc-pod-gw-lb # nombre del HOSTNAME del POD
spec:
  containers:
  - name: python # nombre que va a tener el contenedor dentro del POD
    image: jorgecardona/test-kubernetes-ip-python-3.10.5:v1 # imagen con la que se va a crear el contenedor
    
  - name: java # nombre que va a tener el contenedor dentro del POD
    image: jorgecardona/test-kubernetes-ip-java-17:v1 # imagen con la que se va a crear el contenedor

  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mc-pod-gateway-svc-testing
  name: mc-pod-gateway-svc
  namespace: default
spec:
  sessionAffinity: None
  type: LoadBalancer
  selector:
    run: mc-gateway-pod
  ports:

  - name: port-java # se puede poner el nombre que se quiera, lo importante es el puerto que TIENE que ser el del contenedor
    protocol: TCP
    targetPort: 9999 # puerto original donde se expone el contenedor de la imagen 
    port: 3333 # puerto en el que se quiere exponer la aplicacion, solo porque esta declarada la propiedad targetPort
    
  - name: port-python
    protocol: TCP
    targetPort: 5000 # puerto original donde se expone el contenedor de la imagen 
    port: 80 # puerto en el que se quiere exponer la aplicacion, solo porque esta declarada la propiedad targetPort
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gateway-http-route
spec:
  hostnames:
  - jorge-cardona.gateway
  rules:
  - backendRefs:
    - name: mc-pod-gateway-svc
      port: 1111 # puede ser cualquier valor

# http://jorge-cardona.gateway/python -> ya que el contenedor de python esta expuesto en el puerto 80 no necesita especificar el puerto en la barra de direcciones
# http://jorge-cardona.gateway:3333/java
